fixed the ui styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script type="module" src="dist/stencil-webcmp/stencil-webcmp.esm.js"></script>
     <style>
         body {
+            box-sizing: border-box;
             padding: 0 24px;
+            overflow-x: hidden;
             transition: background-color 0.3s, color 0.3s;
         }
     </style>
