added the favicon and changed some styles

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CM_WEBCMP</title>
+    <meta name="description" content="stencil ui library">
+    <title>CM WEBCMP</title>
+    <link rel="shortcut icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="dist/collection/theme.css">
     <script type="module" src="dist/stencil-webcmp/stencil-webcmp.esm.js"></script>
     <style>
         body {
-            box-sizing: border-box; 
+            box-sizing: border-box;
             overflow-x: hidden;
             transition: background-color 0.3s, color 0.3s;
         }
